# tlucalendar

./: .gitignore  README.md  docker-compose.yml  pubspec.yaml  release.cmd  run_android.cmd  run_emulator_only.cmd
.github/workflows/: release_main.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  crashpad.cmake  crashpad_adapter.cpp  init_crashpad_source.ps1  init_crashpad_source.sh  native-lib.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: injection_container.dart  main.dart
lib/models/: api_response.dart  course.dart  schedule.dart  user.dart
lib/providers/: auth_provider.dart  exam_provider.dart  registration_provider.dart  schedule_provider.dart  theme_provider.dart  user_provider.dart
lib/screens/: app_initializer.dart  calendar_screen.dart  course_registration_screen.dart  exam_schedule_screen.dart  home_shell.dart  login_screen.dart  logs_screen.dart  settings_screen.dart  today_screen.dart
lib/services/: auth_service.dart  auto_refresh_service.dart  backup_service.dart  calendar_sync_service.dart  certificate_pinning.dart  crashpad_service.dart  daily_notification_service.dart  database_helper.dart  download_foreground_service.dart  log_service.dart  notification_service.dart
lib/theme/: app_theme.dart
lib/utils/: error_logger.dart  notification_helper.dart
lib/widgets/: cache_progress_banner.dart  schedule_card.dart  (+4 more)
linux/: CMakeLists.txt
server/: app.py  deploy_guide.md  minidump-server.service
web/: index.html  manifest.json
(+48 files in other folders)
